Sugati/src/objects/Commission__c.object
<CustomObject>
    <description>This is for Travel Agent as well as Property Agent</description>
    <fields>
        <fullName>COM_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Commissions</relationshipLabel>
        <relationshipName>Commissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>COM_Commission_Percentage__c</fullName>
        <label>Commission %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commission_in_Value__c</fullName>
        <label>Commission in Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Commission</label>
    <nameField>
        <displayFormat>COM-{0000000000}</displayFormat>
        <label>Commission ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>